--- a/patientinfo/package.json
+++ b/patientinfo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "search",
+  "name": "patientinfo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:single-spa": "ng run search:single-spa",
-    "serve:single-spa": "ng run search:single-spa-serve"
+    "build:single-spa": "ng run patientinfo:single-spa",
+    "serve:single-spa": "ng run patientinfo:single-spa-serve"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "single-spa-angular": "^3.0.0-beta.14",
